---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - 
  Changes:
    - Added an exception so that Klonan's Transport/Mining Drone pseudo-recipes won't show up in the recipe picker
    - Reworded the tooltip for the production percentage-column to be more correct
  Bugfixes:
    - 

---------------------------------------------------------------------------------------------------
Version: 0.18.12
Date: 30. 04. 2020
  Bugfixes:
    - Fixed the usage of an outdated format for hotkeys that was no longer supported with Factorio 0.18.22

---------------------------------------------------------------------------------------------------
Version: 0.18.11
Date: 07. 04. 2020
  Changes:
    - Added an indication to the tooltip of 'raw ore'-items, differentiating them from mined ore
  Bugfixes:
    - Fixed a crash with infinite values in certain modded situations
    - Fixed that a change to preferences would not always refresh the main interface

---------------------------------------------------------------------------------------------------
Version: 0.18.10
Date: 04. 04. 2020
  Features:
    - Shift-clicking when changing the machine for a recipe now sets that machine as the default
  Changes:
    - Updated the remote interface for Recipe Book to support its new version

---------------------------------------------------------------------------------------------------
Version: 0.18.9
Date: 29. 03. 2020
  Changes:
    - Added exact numbers to the utility dialog machine/module tooltips
  Bugfixes:
    - Fixed a calculation issue where byproducts where not being used up by recipes on subfloors

---------------------------------------------------------------------------------------------------
Version: 0.18.8
Date: 16. 03. 2020
  Bugfixes:
    - Fixed a crash when left-clicking a top level byproduct
