@@ -365,7 +365,6 @@ tut_tl_product=Left-click: Add recipe\nRight-click: Edit\nControl-right-click: D
 tut_tl_byproduct=Shift-left-click: Move right\nControl-left-click: Move left
 tut_recipe=Left-click: Open subfloor\nControl-right-click: Delete\nShift-left-click: Move down\nControl-left-click: Move up
 tut_machine=Left-click: Change\nRight-click: Set limit\nShift-left-click: Upgrade\nControl-left-click: Downgrade
-tut_machine_choice=Left-click: Set\nShift-left-click: Set as default
 tut_module=Left/Right-click: Edit\nControl-right-click: Delete\nShift-left-click: Upgrade tier\nControl-left-click: Downgrade tier\nShift-alt-left-click: Add module\nControl-alt-left-click: Remove module
 tut_beacon_module=Left/Right-click: Edit\nControl-right-click: Delete\nShift-left-click: Upgrade tier\nControl-left-click: Downgrade tier\nShift-alt-left-click: Add module\nControl-alt-left-click: Remove module
 tut_beacon_beacon=Left/Right-click: Edit\nControl-right-click: Delete\nShift-left-click: Upgrade tier\nControl-left-click: Downgrade tier\nShift-alt-left-click: Add beacon\nControl-alt-left-click: Remove beacon
